--- a/AdventOfCode2019/AdventOfCode2019.csproj
+++ b/AdventOfCode2019/AdventOfCode2019.csproj
@@ -39,6 +39,9 @@
     <None Update="Data\Day8.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Data\Day9.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
