--- a/AdventOfCode2019/AdventOfCode2019.csproj
+++ b/AdventOfCode2019/AdventOfCode2019.csproj
@@ -27,6 +27,9 @@
     <None Update="Data\Day10.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Data\Day11.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Data\Day2.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
