--- a/AdventOfCode2019/AdventOfCode2019.csproj
+++ b/AdventOfCode2019/AdventOfCode2019.csproj
@@ -51,6 +51,9 @@
     <None Update="Data\Day15.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Data\Day17.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Data\Day2.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
